--- a/config.toml
+++ b/config.toml
@@ -11,6 +11,8 @@ defaultContentLanguage = "en"
 defaultContentLanguageInSubdir= false
 enableMissingTranslationPlaceholders = false
 
+enableGitInfo = true
+
 [params]
 ordersectionsby = "weight" # ordersectionsby = "title"
 disableSearch = false # default is false
@@ -18,6 +20,9 @@ disableReadmoreNav = false # set true to hide prev/next navigation, default is f
 highlightClientSide = false # set true to use highlight.pack.js instead of the default hugo chroma highlighter
 menushortcutsnewtab = true # set true to open shortcuts links to a new tab/window
 googleAnalytics = "GTM-NF57PJ7"
+github_project_repo = "https://github.com/hofstadter-io/cuetorials.com"
+github_repo = "https://github.com/hofstadter-io/cuetorials.com"
+time_format_default = "January 2, 2006"
 
 [markup]
   [markup.goldmark]
