change highligher, improve snippets, start some new content
Signed-off-by: Tony Worm <tony@hofstadter.io>

--- a/config.toml
+++ b/config.toml
@@ -5,7 +5,7 @@ DefaultContentLanguage = "en"
 title = "Cuetorials"
 # theme = ""
 pygmentsCodeFences = true
-pygmentsStyle = "solarized-dark"
+pygmentsStyle = "github"
 
 defaultContentLanguage = "en"
 defaultContentLanguageInSubdir= false
