--- a/ci/nginx.conf
+++ b/ci/nginx.conf
@@ -1,20 +1,27 @@
 server {
-       listen 80;
-       listen [::]:80;
+  listen 80;
+  listen [::]:80;
 
-       root /usr/share/nginx/html/; #Absolute path to where your hugo site is
-       index index.html; # Hugo generates HTML
+  root /usr/share/nginx/html/; #Absolute path to where your hugo site is
+  index index.html; # Hugo generates HTML
 
-				location ~* \\.(?:css|js|jpg|jpeg|gif|png|ico|cur|gz|svg|svgz|mp4|ogg|ogv|webm|htc)$ {
-					expires 1M;
-					access_log off;
-					add_header Cache-Control "public";
-				}
-				location / {
-          try_files $uri $uri/ =404;
-					expires -1;
-				}
+  location ~* \\.(?:css|js|jpg|jpeg|gif|png|ico|cur|gz|svg|svgz|mp4|ogg|ogv|webm|htc)$ {
+    expires 1M;
+    access_log off;
+    add_header Cache-Control "public";
+  }
 
-				error_page 404 /404.html;
-				error_page 500 502 503 504 /50x.html;
+  location /playground {
+    proxy_pass          https://cuelang.org/.netlify/functions/snippets;
+    proxy_set_header    Host cuelang.org;
+    proxy_redirect      off;
+  }
+
+  location / {
+    try_files $uri $uri/ =404;
+    expires -1;
+  }
+
+  error_page 404 /404.html;
+  error_page 500 502 503 504 /50x.html;
 }
