--- a/config.toml
+++ b/config.toml
@@ -33,7 +33,7 @@ cuedocBase = "https://pkg.go.dev/cuelang.org/go@v0.4.0"
 home = [ "HTML", "RSS", "JSON"]
 
 [[menu.shortcuts]]
-name = "<i class='fas fa-copyright'></i> Cuelang.org"
+name = "v0.4.0 <i class='fas fa-copyright pl-2'></i> Cuelang.org"
 url = "https://cuelang.org"
 weight = 0
 
