some nginx.conf
Signed-off-by: Tony Worm <tony@hofstadter.io>

--- a/ci/nginx.conf
+++ b/ci/nginx.conf
@@ -2,13 +2,27 @@ server {
   listen 80;
   listen [::]:80;
 
-  root /usr/share/nginx/html/; #Absolute path to where your hugo site is
-  index index.html; # Hugo generates HTML
+  root /usr/share/nginx/html/;
+  index index.html;
 
   location ~* \\.(?:css|js|jpg|jpeg|gif|png|ico|cur|gz|svg|svgz|mp4|ogg|ogv|webm|htc)$ {
     expires 1M;
     access_log off;
     add_header Cache-Control "public";
+  }
+
+  location /pageviews {
+    if ($time_iso8601 ~ "^(\d{4})-(\d{2})-(\d{2})") {
+      set $year $1;
+      set $month $2;
+      set $day $3;
+    }
+
+    # TODO, move this to a PV dir? 
+    access_log /var/log/nginx/pageviews.log.$year$month$day main;
+
+    return 200 ':]';
+
   }
 
   location /playground {
