setup full configurability for nginx
Signed-off-by: Tony Worm <tony@hofstadter.io>

--- a/ci/nginx.conf
+++ b/ci/nginx.conf
@@ -1,41 +1,31 @@
-server {
-  listen 80;
-  listen [::]:80;
+user  nginx;
+worker_processes  auto;
 
-  root /usr/share/nginx/html/;
-  index index.html;
+error_log  /var/log/nginx/error.log notice;
+pid        /var/run/nginx.pid;
 
-  location ~* \\.(?:css|js|jpg|jpeg|gif|png|ico|cur|gz|svg|svgz|mp4|ogg|ogv|webm|htc)$ {
-    expires 1M;
-    access_log off;
-    add_header Cache-Control "public";
-  }
+events {
+  worker_connections  1024;
+}
 
-  location /pageviews {
-    if ($time_iso8601 ~ "^(\d{4})-(\d{2})-(\d{2})") {
-      set $year $1;
-      set $month $2;
-      set $day $3;
-    }
+http {
+  include       /etc/nginx/mime.types;
+  default_type  application/octet-stream;
 
-    # TODO, move this to a PV dir? 
-    access_log /var/log/nginx/pageviews.log.$year$month$day main;
+  log_format  main  '$remote_addr - $remote_user $time_iso8601 "$request" '
+                    '$status $body_bytes_sent "$http_referer" '
+                    '"$http_user_agent" "$http_x_forwarded_for"';
 
-    return 200 ':]';
+  log_format pv_fmt '$remote_addr $uri $arg_id $time_iso8601 "$http_user_agent"';
 
-  }
+  access_log  /var/log/nginx/access.log  main;
 
-  location /playground {
-    proxy_pass          https://cuelang.org/.netlify/functions/snippets;
-    proxy_set_header    Host cuelang.org;
-    proxy_redirect      off;
-  }
+  sendfile        on;
+  #tcp_nopush     on;
 
-  location / {
-    try_files $uri $uri/ =404;
-    expires -1;
-  }
+  keepalive_timeout  65;
 
-  error_page 404 /404.html;
-  error_page 500 502 503 504 /50x.html;
+  #gzip  on;
+
+  include /etc/nginx/conf.d/*.conf;
 }
