--- a/ci/Dockerfile
+++ b/ci/Dockerfile
@@ -1,4 +1,5 @@
 FROM nginx:stable
 
 COPY dist /usr/share/nginx/html
-COPY ./ci/nginx.conf /etc/nginx/conf.d/default.conf
+COPY ./ci/nginx.conf /etc/nginx/nginx.conf
+COPY ./ci/server.conf /etc/nginx/conf.d/server.conf
