--- a/ci/server.conf
+++ b/ci/server.conf
@@ -19,7 +19,7 @@ server {
     }
 
     # TODO, move this to a PV dir? 
-    access_log /var/log/nginx/pv.log.$year$month$day pv_fmt;
+    access_log /var/log/pv/log.$year$month$day pv_fmt;
 
     return 200 ':]';
   }
