--- a/ci/Dockerfile
+++ b/ci/Dockerfile
@@ -1,5 +1,6 @@
 FROM nginx:stable
 
-COPY dist /usr/share/nginx/html
+RUN mkdir /var/log/pv && chown nginx:nginx /var/log/pv
 COPY ./ci/nginx.conf /etc/nginx/nginx.conf
-COPY ./ci/server.conf /etc/nginx/conf.d/server.conf
+COPY ./ci/server.conf /etc/nginx/conf.d/default.conf
+COPY dist /usr/share/nginx/html
