--- a/ci/nginx.conf
+++ b/ci/nginx.conf
@@ -16,7 +16,7 @@ http {
                     '$status $body_bytes_sent "$http_referer" '
                     '"$http_user_agent" "$http_x_forwarded_for"';
 
-  log_format pv_fmt '$arg_id $uri $time_iso8601 $remote_addr "$http_user_agent"';
+  log_format pv_fmt '$arg_id $time_iso8601 $uri $remote_addr "$http_x_forwarded_for" "$http_user_agent"';
 
   access_log  /var/log/nginx/access.log  main;
 
