--- a/ci/server.conf
+++ b/ci/server.conf
@@ -2,6 +2,11 @@ server {
   listen 80;
   listen [::]:80;
 
+  add_header X-Frame-Options SAMEORIGIN;
+  add_header X-Content-Type-Options nosniff;
+  add_header Content-Security-Policy "default-src 'self';img-src 'self' data:;style-src 'self' 'unsafe-inline';script-src 'self' 'unsafe-inline'";
+  add_header Referrer-Policy no-referrer-when-downgrade;
+
   root /usr/share/nginx/html/;
   index index.html;
 
