--- a/ci/server.conf
+++ b/ci/server.conf
@@ -4,8 +4,14 @@ server {
 
   add_header X-Frame-Options SAMEORIGIN;
   add_header X-Content-Type-Options nosniff;
-  add_header Content-Security-Policy "default-src 'self';img-src 'self' data:;style-src 'self' 'unsafe-inline';script-src 'self' 'unsafe-inline'";
   add_header Referrer-Policy no-referrer-when-downgrade;
+  add_header Content-Security-Policy "
+    default-src 'self';
+    script-src 'self' 'unsafe-inline' https://www.googletagmanager.com https://www.google-analytics.com;
+    style-src 'self' 'unsafe-inline';
+    img-src 'self' data: www.googletagmanager.com www.google-analytics.com;
+    connect-src 'self' www.google-analytics.com;
+  ";
 
   root /usr/share/nginx/html/;
   index index.html;
