--- a/config.toml
+++ b/config.toml
@@ -14,6 +14,7 @@ enableMissingTranslationPlaceholders = false
 enableGitInfo = true
 
 [params]
+sitename="Cuetorials"
 ordersectionsby = "weight" # ordersectionsby = "title"
 disableSearch = false # default is false
 disableReadmoreNav = false # set true to hide prev/next navigation, default is false
