add newsletter signup
Signed-off-by: Tony Worm <tony@hofstadter.io>

--- a/ci/server.conf
+++ b/ci/server.conf
@@ -5,7 +5,7 @@ server {
   add_header X-Frame-Options SAMEORIGIN;
   add_header X-Content-Type-Options nosniff;
   add_header Referrer-Policy no-referrer-when-downgrade;
-  add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' https://www.googletagmanager.com https://www.google-analytics.com; style-src 'self' 'unsafe-inline'; img-src 'self' data: www.googletagmanager.com www.google-analytics.com; connect-src 'self' www.google-analytics.com; ";
+  add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' https://www.googletagmanager.com https://www.google-analytics.com; style-src 'self' 'unsafe-inline'; img-src 'self' data: www.googletagmanager.com www.google-analytics.com; connect-src 'self' www.google-analytics.com; form-action 'self' https://hofstadter.us5.list-manage.com";
 
   root /usr/share/nginx/html/;
   index index.html;
