verify code/overview/foundations; print verify commands
Signed-off-by: Tony Worm <tony@hofstadter.io>

--- a/code/go-api/basics/context/Makefile
+++ b/code/go-api/basics/context/Makefile
@@ -6,14 +6,14 @@ tests = context encoding scope
 all: $(tests)
 
 context: context.go
-	@go run context.go > context.cue
+	go run context.go > context.cue
 	$(DIFF_CMD) context.cue
 
 encoding: encoding.go
-	@go run encoding.go > encoding.cue
+	go run encoding.go > encoding.cue
 	$(DIFF_CMD) encoding.cue
 
 scope: scope.go
-	@go run scope.go > scope.cue
+	go run scope.go > scope.cue
 	$(DIFF_CMD) scope.cue
 
