--- a/code/introduction/Makefile
+++ b/code/introduction/Makefile
@@ -6,8 +6,8 @@ tests = hierarchy json-superset
 all: $(tests)
 
 hierarchy:
-	@cue export hierarchy/code.cue > /dev/null
+	cue export hierarchy/code.cue > /dev/null
 
 json-superset:
-	@cue export --out cue json-superset/lhs.json > json-superset/rhs.cue
+	cue export --out cue json-superset/lhs.json > json-superset/rhs.cue
 	$(DIFF_CMD) json-superset/rhs.cue
