fixes to font loading

--- a/ci/server.conf
+++ b/ci/server.conf
@@ -8,13 +8,14 @@ server {
 
   set $CSP_DEFAULT_SRC "default-src 'self'";
   set $CSP_SCRIPT_SRC "script-src 'self' 'unsafe-inline' https://www.googletagmanager.com https://www.google-analytics.com";
-  set $CSP_STYLE_SRC "style-src 'self' 'unsafe-inline'";
+  set $CSP_STYLE_SRC "style-src 'self' 'unsafe-inline' https://fonts.googleapis.com";
+  set $CSP_FONT_SRC "font-src 'self' https://fonts.gstatic.com";
   set $CSP_IMG_SRC "img-src 'self' avatars.githubusercontent.com data: www.googletagmanager.com www.google-analytics.com";
   set $CSP_CONNECT_SRC "connect-src 'self' www.google-analytics.com";
   set $CSP_FORM_ACTION "form-action 'self' https://hofstadter.us5.list-manage.com";
   set $CSP_FRAME_SRC "frame-src youtube.com www.youtube.com";
 
-  add_header Content-Security-Policy "${CSP_DEFAULT_SRC}; ${CSP_SCRIPT_SRC}; ${CSP_STYLE_SRC}; ${CSP_IMG_SRC}; ${CSP_CONNECT_SRC}; ${CSP_FORM_ACTION}; ${CSP_FRAME_SRC};";
+  add_header Content-Security-Policy "${CSP_DEFAULT_SRC}; ${CSP_SCRIPT_SRC}; ${CSP_STYLE_SRC}; ${CSP_FONT_SRC}; ${CSP_IMG_SRC}; ${CSP_CONNECT_SRC}; ${CSP_FORM_ACTION}; ${CSP_FRAME_SRC};";
 
   root /usr/share/nginx/html/;
   index index.html;
