set nginx version

--- a/ci/Dockerfile
+++ b/ci/Dockerfile
@@ -1,4 +1,4 @@
-FROM nginx:stable
+FROM nginx:1.21.6
 
 RUN mkdir /var/log/pv && chown nginx:nginx /var/log/pv
 COPY ./ci/nginx.conf /etc/nginx/nginx.conf
