update CSP for vue

--- a/ci/server.conf
+++ b/ci/server.conf
@@ -7,7 +7,7 @@ server {
   add_header Referrer-Policy no-referrer-when-downgrade;
 
   set $CSP_DEFAULT_SRC "default-src 'self'";
-  set $CSP_SCRIPT_SRC "script-src 'self' 'unsafe-inline' https://www.googletagmanager.com https://www.google-analytics.com";
+  set $CSP_SCRIPT_SRC "script-src 'self' 'unsafe-eval' 'unsafe-inline' https://unpkg.com https://www.googletagmanager.com https://www.google-analytics.com";
   set $CSP_STYLE_SRC "style-src 'self' 'unsafe-inline' https://fonts.googleapis.com";
   set $CSP_FONT_SRC "font-src 'self' https://fonts.gstatic.com";
   set $CSP_IMG_SRC "img-src 'self' avatars.githubusercontent.com data: www.googletagmanager.com www.google-analytics.com";
