add caching to menu.json (and all json/yaml files) served from nginx

--- a/ci/server.conf
+++ b/ci/server.conf
@@ -20,6 +20,12 @@ server {
   root /usr/share/nginx/html/;
   index index.html;
 
+  location ~* \\.(?:json|yaml)$ {
+    expires 1h;
+    access_log off;
+    add_header Cache-Control "public";
+  }
+
   location ~* \\.(?:css|js|jpg|jpeg|gif|png|ico|cur|gz|svg|svgz|mp4|ogg|ogv|webm|htc)$ {
     expires 1M;
     access_log off;
