config fix and other small updates

--- a/data/projects.yaml
+++ b/data/projects.yaml
@@ -18,7 +18,7 @@
   logo:  /images/hof.svg
   blurb: |
     uses CUE to power a data modeling & code generation,
-    the High Code™ platform (low-code for developers).
+    the High Code™ company (low-code for developers).
 
 - name: thema
   org:  Grafana
