work on overview, starting some new content

--- a/config.yaml
+++ b/config.yaml
@@ -47,6 +47,12 @@ outputs:
     - HTML
     - RSS
     - JSON
+  page:
+    - HTML
+    - JSON
+  section:
+    - HTML
+    - JSON
 menu:
   shortcuts:
     - name: v0.4.3 <i class='fas fa-copyright pl-2'></i> Cuelang.org
