--- a/config.yaml
+++ b/config.yaml
@@ -14,7 +14,7 @@ params:
   disableReadmoreNav: false
   highlightClientSide: false
   menushortcutsnewtab: true
-  ga: UA-103579574-6
+  ga: G-LXK0DFYZX4
   github_project_repo: https://github.com/hofstadter-io/cuetorials.com
   github_repo: https://github.com/hofstadter-io/cuetorials.com
   time_format_default: January 2, 2006
